@@ -1,8 +1,15 @@
 TinyPedal (WIP)
 -----------------------------
+* Force widget
+    - Added horizontal layout.
+
+* Relative Widget
+    - Removed brackets from combined driver name if name is empty.
+
 * Core
     - [New]Auto sorts all options in JSON file according to default setting template
       for better readability and consistency.
+    - Implemented new GUI update methods for widgets: Deltabest, Force.
 
 TinyPedal 1.10.3 (2023-01-31)
 -----------------------------
